--- a/index.htm
+++ b/index.htm
@@ -20,11 +20,10 @@
 
 <body>
 
-<p class="style1"><strong>欢迎来到Damian的博客</strong></p>
-<p class="style2"><strong>网站详情：总文章数：1篇，管理员：李同南</strong></p>
+<p class="style1"><strong>欢迎来到Damian的博客(老版本)</strong></p>
+<p class="style2"><strong>网站详情：总文章数：0篇，管理员：李同南，请前往新版本</strong></p>
 <p class="style2">导航：</p>
-<p class="style2"><a href="about.htm">关于本站</a></p>
-<p class="style2"><a href="about_admin.htm">作者详情</a></p>
+<p class="style2"><a href="https://damian38665.github.io/">前往首页并进入新博客</a></p>
 
 </body>
 
